# leos

./: .gitignore  LICENSE  README.md  pyproject.toml
kernels/: fetch_kernels.py
leos/: __init__.py  atmosphere.py  atmosphere_moon.py  geometry.py  solar_geometry.py  solar_spectrum.py  solar_variability.py  spectral_sources.py  spice_utils.py  test_atmosphere_earth.py  uncertainty.py  units.py
leos/Atmosphere/: __init__.py  atmosphere_earth.py  atmosphere_mars.py  atmosphere_moon.py  solar_geometry.py
leos/Coordinates/: __init__.py  geometry.py  solar_geometry.py  spice_utils.py
leos/Spectrum/: __init__.py  solar_spectrum.py  solar_variability.py  spectrum.py
leos/data/: mcd_bundled_profiles.npz
leos/kernels/: __init__.py  _kernel_common.py  fetch_generic_kernels.py  fetch_kernels.py
leos/kernels/missions/: __init__.py  fetch_curiosity_kernels.py  fetch_mars_express_kernels.py  fetch_maven_kernels.py  fetch_mro_kernels.py  fetch_perseverance_kernels.py
leos/scripts/: convert_satire.py
scripts/: convert_era5.py  convert_lola.py  convert_mcd_webapi.py  convert_merra2.py  convert_satire.py
tests/: test_coordinates_init.py  test_fetch_kernels.py  test_init.py  test_kernels_init.py  test_uncertainty.py  test_units.py
tests/Coordinates/: test_spice_utils.py
tests/kernels/: test__kernel_common.py  test_fetch_generic_kernels.py  test_fetch_kernels.py  test_kernels_init.py
tests/kernels/missions/: test_fetch_curiosity_kernels.py  test_fetch_insight_kernels.py  test_fetch_mars_express_kernels.py  test_fetch_maven_kernels.py  test_fetch_mro_kernels.py  (+2 more)
(+9 files in other folders)
