[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leos"
version = "0.1.0-dev"
description = "Light Environment Observatory for the Solar System"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Srikrishna Karthick" }
]
keywords = [
    "planetary science",
    "solar irradiance",
    "radiative transfer",
    "SPICE",
    "astrobiology"
]
dependencies = [
    "spiceypy>=6.0",
    "astropy>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "xarray>=2024.0",
    "netCDF4>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["leos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
